# wx_official_cli

./: .gitignore  MANIFEST.in  README.md  USER_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-05-26-wechat-standalone-design.md
hedicxl_function_guide/: index.html  manifest.json
scripts/: ci_api_base_verify.py  verify_windows_cache.ps1
src/gh_ui_cli/: __init__.py  __main__.py  api_client.py  cli.py  coverage_audit.py  dependencies.py  invoke.py  io.py  manifest.py  profile.py  runtime_verify.py  smoke.py  source.py  verification_plan.py  verify.py  wx_official_cli.py
src/gh_ui_cli/ai/: __init__.py  service.py
src/gh_ui_cli/backtest/: __init__.py  service.py
src/gh_ui_cli/data/: __init__.py  download.py  parquet_map.py  query.py
src/gh_ui_cli/factor/: __init__.py  download.py  service.py
tests/: test_ci_api_base_verify.py  test_ci_workflow.py  test_cli_helpers.py  test_cli_http_integration.py  test_cli_parser.py  test_coverage_audit.py  test_dependencies.py  test_http_api_client.py  test_invoke.py  test_manifest.py  test_profile.py  test_runtime_verify_cli.py  test_smoke.py  test_verify.py  test_wx_official_cli.py
tests/ai/: test_ai_service.py
tests/backtest/: test_backtest_service.py
tests/data/: test_data_services.py
tests/factor/: test_factor_service.py
tests/fixtures/: minimal_requirements.txt
tests/remote/: test_remote_service.py
tests/system/: test_system_services.py
tests/wechat/: test_articles_service.py  test_cli_integration.py  test_config_service.py  test_contacts_service.py  test_crypto.py  test_dispatch.py  test_errors.py  test_key_scan.py  test_keys_service.py  test_messages_service.py  test_models.py  test_paths.py  test_registry.py  test_scanner_win.py  test_stage5.py
(+47 files in other folders)
