[project]
name = "gh-ui-cli"
version = "0.1.0"
description = "Agent-friendly CLI for gh_quant_ui"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.34",
  "httpx>=0.27",
  "pycryptodome>=3.19",
]

[project.optional-dependencies]
full = [
  "python-multipart>=0.0.7",
  "pandas>=2.0",
  "pyarrow>=15.0",
  "sqlalchemy>=2.0",
  "pymysql>=1.1",
  "cryptography>=42.0",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "requests>=2.31",
  "pycryptodome>=3.19",
  "zstandard>=0.22",
  "ddddocr>=1.5",
  "onnxruntime<1.24; python_version < '3.11'",
  "tqdm>=4.66",
  "akshare>=1.13",
  "pyecharts>=2.0",
  "fpdf2>=2.7",
  "openpyxl>=3.1",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "pymem>=1.13; sys_platform == 'win32'",
]

[project.scripts]
gh-ui = "gh_ui_cli.cli:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
