[project]
name = "wx-official-cli"
version = "0.1.0"
description = "Agent-friendly CLI for exporting cached WeChat official-account articles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pycryptodome>=3.19",
  "zstandard>=0.22",
]

[project.scripts]
wx-official-cli = "gh_ui_cli.wx_official_cli:main"

[tool.uv]
package = true

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "gh_ui_cli",
  "gh_ui_cli.wechat*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
